--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "pr-bumper",
-  "version": "3.7.1",
-  "description": "Bump the version of a package based on a GitHub Pull Request",
-  "scripts": {
-    "lint": "eslint *.js bin lib tests",
-    "test": "yarn run lint && yarn run utest",
-    "utest": "istanbul cover _mocha tests tests/ci tests/vcs tests/compliance --report lcov --report json-summary"
-  },
+  "name": "bumpr",
+  "version": "0.1.0",
+  "description": "Bump the version of an package based on a Pull Request",
   "bin": {
-    "pr-bumper": "./bin/cli.js"
+    "bumpr": "./bin/cli.js"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:ciena-blueplanet/pr-bumper.git"
+    "url": "git@github.com:jobsquad/bumpr.git"
   },
   "engines": {
-    "node": ">= 6.0"
+    "node": ">= 9.0"
   },
   "keywords": [
     "github",
@@ -32,31 +27,58 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ciena-blueplanet/pr-bumper/issues"
+    "url": "https://github.com/jobsquad/bumpr/issues"
   },
-  "homepage": "https://github.com/ciena-blueplanet/pr-bumper#readme",
+  "homepage": "https://github.com/jobsquad/bumpr#readme",
+  "scripts": {
+    "precommit": "lint-staged",
+    "lint": "eslint *.js bin src",
+    "test": "yarn run lint && jest --coverage"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --config .prettierrc.js --write",
+      "git add"
+    ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/typedefs.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "statements": 100
+      }
+    },
+    "testEnvironment": "node"
+  },
   "dependencies": {
+    "chalk": "^2.4.1",
     "commander": "^2.9.0",
     "lodash": "^4.0.1",
     "nlf": "^1.4.1",
     "node-fetch": "^1.3.3",
-    "prepend-file": "^1.3.0",
     "promise": "^7.1.1",
-    "q": "^1.4.1",
+    "replace-in-file": "^3.4.0",
     "versiony": "^2.0.1"
   },
   "devDependencies": {
-    "chai": "^3.4.1",
-    "eslint": "^3.5.0",
-    "eslint-config-frost-standard": "^9.0.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier-airbnb": "^0.3.0",
+    "eslint-plugin-import": "^2.11.0",
     "freezly": "^1.0.0",
-    "istanbul": "^0.4.2",
-    "mocha": "^2.3.4",
-    "rewire": "^2.5.1",
-    "sinon": "^2.3.4",
-    "sinon-chai": "^2.11.0"
-  },
-  "pr-bumper": {
-    "coverage": 93.71
+    "husky": "^0.14.3",
+    "jest": "^22.4.3",
+    "lint-staged": "^7.1.0",
+    "prettier": "^1.12.1",
+    "webpack": "^4.8.0",
+    "webpack-cli": "^2.1.3",
+    "webpack-node-externals": "^1.7.2"
   }
 }
