--- a/package.json
+++ b/package.json
@@ -31,32 +31,14 @@
   },
   "homepage": "https://github.com/jobsquad/bumpr#readme",
   "scripts": {
-    "precommit": "lint-staged",
     "lint": "eslint *.js bin src",
+    "watch-test": "jest --coverage --watch",
     "test": "yarn run lint && jest --coverage"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": [
-      "prettier --config .prettierrc.js --write",
-      "git add"
-    ]
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.js",
-      "!src/typedefs.js"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 100,
-        "statements": 100
-      }
-    },
-    "testEnvironment": "node"
   },
   "dependencies": {
     "chalk": "^2.4.1",
     "commander": "^2.9.0",
+    "cosmiconfig": "^5.0.5",
     "lodash": "^4.0.1",
     "nlf": "^1.4.1",
     "node-fetch": "^1.3.3",
@@ -73,10 +55,10 @@
     "eslint-config-prettier-airbnb": "^0.3.0",
     "eslint-plugin-import": "^2.11.0",
     "freezly": "^1.0.0",
-    "husky": "^0.14.3",
-    "jest": "^22.4.3",
-    "lint-staged": "^7.1.0",
-    "prettier": "^1.12.1",
+    "husky": "^1.0.0-rc.12",
+    "jest": "^23.1.0",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.13.7",
     "webpack": "^4.8.0",
     "webpack-cli": "^2.1.3",
     "webpack-node-externals": "^1.7.2"
