--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "commander": "^2.9.0",
     "cosmiconfig": "^5.0.5",
     "lodash": "^4.0.1",
+    "mime-types": "^2.1.22",
     "moment-timezone": "^0.5.21",
     "nlf": "^1.4.1",
     "node-fetch": "^1.3.3",
