--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
   },
   "dependencies": {
     "chalk": "^2.4.1",
-    "commander": "^2.9.0",
-    "cosmiconfig": "^5.0.5",
-    "lodash": "^4.0.1",
+    "commander": "^2.20.0",
+    "cosmiconfig": "^5.2.1",
+    "lodash": "^4.17.11",
     "mime-types": "^2.1.22",
     "moment-timezone": "^0.5.21",
     "nlf": "^1.4.1",
@@ -49,9 +49,6 @@
     "versiony": "^2.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier-airbnb": "^0.3.0",
@@ -60,9 +57,6 @@
     "husky": "^1.0.0-rc.12",
     "jest": "^23.1.0",
     "lint-staged": "^7.2.0",
-    "prettier": "^1.13.7",
-    "webpack": "^4.8.0",
-    "webpack-cli": "^2.1.3",
-    "webpack-node-externals": "^1.7.2"
+    "prettier": "^1.13.7"
   }
 }
