--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "scripts": {
     "lint": "eslint *.js bin src",
     "watch-test": "jest --coverage --watch",
-    "test": "yarn run lint && jest --coverage"
+    "test": "yarn run lint && jest --coverage",
+    "prepare": "husky install"
   },
   "dependencies": {
     "chalk": "^4.1.1",
@@ -51,12 +52,13 @@
   "devDependencies": {
     "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier-airbnb": "^0.3.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4",
     "freezly": "^2.0.2",
-    "husky": "^6.0.0",
+    "husky": "^7.0.0",
     "jest": "^27.0.5",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.1"
