--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,13 +6,13 @@ on:
   pull_request:
     branches: [ main ]
 
-env:
-  GITHUB_READ_ONLY_TOKEN: {{ secrets.GH_RO_TOKEN }}
-  GITHUB_TOKEN: {{ secrets.GH_RW_TOKEN }}
-  NPM_TOKEN: {{ secrets.NPM_TOKEN }}
 
 jobs:
   build:
+    env:
+      GITHUB_READ_ONLY_TOKEN: ${{ secrets.GH_RO_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GH_RW_TOKEN }}
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
     runs-on: ubuntu-latest
 
