--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
       GITHUB_READ_ONLY_TOKEN: ${{ secrets.GH_RO_TOKEN }}
       GITHUB_TOKEN: ${{ secrets.GH_RW_TOKEN }}
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      PR_NUM: ${{ github.event.issue.number }}
+      PR_URL: https://github.com/all-i-code/bumpr/pulls/${{ github.event.issue.number }}
 
     runs-on: ubuntu-latest
 
