Switch to npm from yarn

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,12 +18,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js 16.x
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
-      - run: yarn install
+          node-version: 18.x
+      - run: npm install
       - run: VERBOSE=1 ./bin/cli.js check
-      - run: yarn test
+      - run: npm run test
       - run: VERBOSE=1 ./bin/cli.js bump
       - run: VERBOSE=1 ./bin/cli.js publish
