--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "versiony": "^2.0.1"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.22.15",
+    "@babel/plugin-syntax-import-assertions": "^7.22.5",
     "@babel/preset-env": "^7.22.20",
     "babel-jest": "^29.7.0",
     "eslint": "^8.50.0",
