--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "node-fetch": "^2.6.1",
     "promise": "^8.1.0",
     "replace-in-file": "^6.3.2",
-    "versiony": "^2.0.1"
+    "semver": "^7.5.4"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.15",
