--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,3 @@
 {
-  "presets": ["@babel/preset-env"],
-  "plugins": ["@babel/plugin-syntax-import-assertions"]
+  "presets": ["@babel/preset-env"]
 }
