Remove experimental json import (#74)
* Remove experimental json import

* Remove unused dependency

* Fix __dirname references

--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.15",
-    "@babel/plugin-syntax-import-assertions": "^7.22.5",
     "@babel/preset-env": "^7.22.20",
     "babel-jest": "^29.7.0",
+    "babel-plugin-transform-import-meta": "^2.2.1",
     "eslint": "^8.50.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier-airbnb": "^0.5.0",
